# DirectX12_BufferPerformanceTest

./: .gitignore  CMakeLists.txt  README.md  cb_pixel.hlsl
src/: d3d12_app.cpp  d3d12_app.hpp  d3d12_helper.hpp  d3dx12.hpp  main.cpp  main.hpp  profiler.cpp  profiler.hpp
